@@ -15,9 +15,19 @@
     <dependencies>
         <dependency>
             <groupId>org.catas</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>proxy-server</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.micronaut</groupId>
+                    <artifactId>micronaut-runtime</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.micronaut</groupId>
+                    <artifactId>micronaut-http-server-netty</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -41,16 +51,44 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <version>${javafx.maven.plugin.version}</version>
                 <configuration>
                     <mainClass>com.catas.wicked.proxy.WickedProxyApplication</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                        <option>--add-opens</option>
+                        <option>java.base/java.lang.reflect=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>com.gluonhq</groupId>
                 <artifactId>gluonfx-maven-plugin</artifactId>
-                <version>1.0.19</version>
+                <version>${gluonfx.maven.plugin.version}</version>
                 <configuration>
                     <mainClass>com.catas.wicked.proxy.WickedProxyApplication</mainClass>
                     <linkerArgs>
@@ -66,11 +104,33 @@
                         <arg>--initialize-at-build-time=java.beans.Introspector</arg>
 
                         <arg>--initialize-at-run-time=io.netty.util.AbstractReferenceCounted</arg>
-                        <arg>--initialize-at-run-time=io.netty.channel.epoll</arg>
-                        <arg>--initialize-at-run-time=io.netty.handler.ssl</arg>
-                        <arg>--initialize-at-run-time=io.netty.channel.unix</arg>
+                        <!-- <arg>&#45;&#45;initialize-at-run-time=io.netty.channel.epoll</arg> -->
+                        <!-- <arg>&#45;&#45;initialize-at-run-time=io.netty.handler.ssl</arg> -->
+                        <!-- <arg>&#45;&#45;initialize-at-run-time=io.netty.channel.unix</arg> -->
 
-                        <arg>--initialize-at-run-time=com.catas.wicked.proxy.gui.ApplicationView</arg>
+                        <arg>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</arg>
+                        <arg>--add-opens java.base/java.lang=ALL-UNNAMED</arg>
+
+                        <arg>--initialize-at-build-time=io.netty.util.internal.logging.Slf4JLoggerFactory</arg>
+                        <arg>--initialize-at-build-time=io.netty.channel.MultithreadEventLoopGroup</arg>
+                        <arg>--initialize-at-build-time=io.netty.util.internal.logging.InternalLoggerFactory</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.DefaultFileRegion</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.epoll.Native</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.epoll.Epoll</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.epoll.EpollEventLoop</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.epoll.EpollEventArray</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.KQueue</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.KQueueEventLoop</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.KQueueEventArray</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.kqueue.Native</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.unix.Limits</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.unix.Errors</arg>
+                        <arg>--initialize-at-run-time=io.netty.channel.unix.IovArray</arg>
+                        <arg>--initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils</arg>
+                        <arg>--initialize-at-run-time=io.netty.incubator.codec.quic.InsecureQuicTokenHandler</arg>
+                        <arg>--initialize-at-run-time=io.netty.incubator.codec.quic.SecureRandomQuicConnectionIdGenerator</arg>
+                        <!-- <arg></arg> -->
+
                     </nativeImageArgs>
                 </configuration>
             </plugin>
@@ -105,16 +165,25 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.26</version>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>io.micronaut</groupId>
+                            <artifactId>micronaut-inject-java</artifactId>
+                            <version>${micronaut.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-Amicronaut.processing.group=org.catas</arg>
+                        <!-- <arg>-Amicronaut.processing.module=hellofx</arg> -->
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>${maven.sureplugin.version}</version>
                 <configuration>
                     <skip>true</skip>
                     <classpathDependencyExcludes>org.graalvm.nativeimage</classpathDependencyExcludes>
